⏱❄️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
-<html>
-  <head>
-    <title>kavaughn walston</title>
-  </head>
-  <body>
-    <address>
-      420 My street <br />
-      My city st 111111
-    </address>
-    <p>
-      tel: 929-500-4709 Email:17kwright@gmail.com
-    </p>
-    <h1>
-      Kavaughn walston
+<!DOCTYPE html>
+<html lang="en">
+  <head> 
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-compatible" content="IE=edge"/>
+  <meta name="viewpoint" content="witdh=device-width, inital-scal=1"/>
+  <body style="background-color:yellow;">
+    <img src="pic_trulli.jpg" alt="Italian Trulli">
+    <title>Index</title>
+    </body>
+    </head>
+  <!--   CSS Comment
+  /*
+    background-color: rgb(142, 106, 163);
+  */ 
+-->
+  <body style="/*background-color: rgb(142, 106, 163);*/">
+    <!--   Inline CSS -->
+    <h1 style="color: #444; text-align:center; border: 10px dotted pink; font-family: Verdana;">
+      Hello World!
     </h1>
-
-    <img
-      src="https://i.ytimg.com/vi/hvswlHZBwgk/maxresdefault.jpg"
-      alt="Astor Collegiate Academy - YouTube"
-      width="50%"
-      height="50%"
-    />
-
-    <h2>
-      Skills
-    </h2>
-    <p>
-      Teamwork,problem solving, Time Management
-    </p>
-    <h2>
-      Experience
-    </h2>
-    <p>
-      <b>Kips bay boys & girls club 625 castle hill ave</b>: I have worked with
-      summer youth for three years now which was dealing with mateintence and a
-      teen program that we would interact with others in the community.
-    </p>
-    <h2>
-      School
-      <p>
-        <b>Astor collegiate Academy 925 Astor Ave, The Bronx, NY 10469</b>
-      </p>
-    </h2>
+    <h1
+      style="text-align:right; border-left: 3px solid blue; background-color: rgba(240, 12, 168, 0.5);"
+    >
+      Welcome
+    </h1>
+    <div
+      style="
+                background-image: url(https://picsum.photos/800/300);
+                height: 60vh;
+                width: 50vw;
+                margin: 0 auto 0 auto;
+                background-size: cover;
+                "
+    >
+      <h2>
+        Redcross Rescue Fund
+      </h2>
+    </div>
   </body>
+</html>
+  
+  
+  
+  
+  </head>
 </html>
