--- a/index.html
+++ b/index.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-compatible" content="IE=edge"/>
-  <meta name="viewpoint" content="witdh=device-width, inital-scal=1"/>
-  <body style="background-color:yellow;">
-    <img src="pic_trulli.jpg" alt="Italian Trulli">
-    <title>Index</title>
-    </body>
-    </head>
-  <!--   CSS Comment
-  /*
-    background-color: rgb(142, 106, 163);
-  */ 
--->
-  <body style="/*background-color: rgb(142, 106, 163);*/">
-    <!--   Inline CSS -->
-    <h1 style="color: #444; text-align:center; border: 10px dotted pink; font-family: Verdana;">
-      Hello World!
-    </h1>
-    <h1
-      style="text-align:right; border-left: 3px solid blue; background-color: rgba(240, 12, 168, 0.5);"
-    >
-      Welcome
-    </h1>
-    <div
-      style="
-                background-image: url(https://picsum.photos/800/300);
-                height: 60vh;
-                width: 50vw;
-                margin: 0 auto 0 auto;
-                background-size: cover;
-                "
-    >
-      <h2>
-        Redcross Rescue Fund
-      </h2>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>Home - Video game reviews</title>
+
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="header">
+      <!--       https://picsum.photos/100/100 -->
+      <img src="https://picsum.photos/100/100" alt="logo" width="100" />
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">about</a></li>
+        <li><a href="resident.html">resident</a> </li>    
+      </ul>
+    </div>
+
+    <h1>Welcome <i class="fas fa-video"></i></h1>
+    <p>
+      This website is about our viewpoint on three video games that is bad in
+      our opioin and rate that game from 1 to 10 on graphics, character
+      development, and plot of the story.But this website is not all negatvity
+      but also some good things about these games.
+    </p>
+    
+    <div class="row">
+      <div class="col">
+        <div style="width:100%;height:0;padding-bottom:71%;position:relative;">
+          <iframe
+            src="https://giphy.com/embed/MEdXzJwmTvjpw79Gig"
+            width="100%"
+            height="100%"
+            style="position:absolute"
+            frameborder="0"
+            class="giphy-embed"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <p>
+          <a href="https://giphy.com/gifs/memecandy-MEdXzJwmTvjpw79Gig"
+            >via GIPHY</a
+          >
+        </p>
+      </div>
+      <div class="col">
+        column 2
+       
+      </div>
     </div>
   </body>
-</html>
-  
-  
-  
-  
-  </head>
 </html>
